[add] about page

--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,10 @@ html {
   color: var(--imp-text-color) !important;
 }
 
+.bluesky {
+  color: #00b7ff !important;
+}
+
 button:focus {
   box-shadow: none !important;
 }
