[add] update about page

--- a/src/style.css
+++ b/src/style.css
@@ -447,8 +447,8 @@ button:focus {
   padding: 0 !important;
 }
 
-.blockquote-footer {
-  color: #a588c0 !important;
+.purple_text {
+  color: #ad5bc4 !important;
 }
 /* --------- */
 /* Projects */
