--- a/src/style.css
+++ b/src/style.css
@@ -468,6 +468,12 @@ button:focus {
   height: auto !important;
 }
 
+.project-card-text {
+  position: relative !important;
+  text-align: center !important;
+  vertical-align: bottom !important;
+}
+
 .project-card-view {
   box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459) !important;
   color: white !important;
