[add] Project translation

--- a/src/style.css
+++ b/src/style.css
@@ -474,6 +474,7 @@ button:focus {
   position: relative !important;
   text-align: left !important;
   vertical-align: bottom !important;
+  white-space: pre-line !important;
 }
 
 .project-card-view {
