--- a/src/style.css
+++ b/src/style.css
@@ -345,6 +345,7 @@ button:focus {
   padding-top: 50px;
   font-size: 1.2em !important;
   text-align: left;
+  white-space: pre-line !important;
 }
 
 .home-about-social {
