feat: add new feature

--- a/src/style.css
+++ b/src/style.css
@@ -604,6 +604,7 @@ button:focus {
   border: none !important;
   color: white !important;
   background-color: transparent !important;
+  white-space: pre-line !important;
 }
 
 .about-activity {
