feat: add new project card

--- a/src/style.css
+++ b/src/style.css
@@ -453,6 +453,10 @@ button:focus {
 .purple_text {
   color: #ad5bc4 !important;
 }
+
+.blue_text {
+  color: #5b6af5 !important;
+}
 /* --------- */
 /* Projects */
 /* --------- */
